--- a/client/src/components/Post/Post.css
+++ b/client/src/components/Post/Post.css
@@ -8,7 +8,7 @@
     justify-content: space-between;
     align-items: center;
 
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .post-header > h3 {
@@ -19,12 +19,13 @@
 .userinfo > .MuiAvatar-root {
     width: 40px;
     height: 40px;
-    border: var(--highlight-color) 2px solid;
+    cursor: pointer;
 }
 
 .userinfo > h3 {
     font-weight: 400;
     margin-left: 10px;
+    cursor: pointer;
 }
 
 .post-header > .userinfo {
@@ -46,6 +47,7 @@
 .post-content > img {
     border-radius: 10px;
     margin-bottom: 20px;
+    max-width: 71%;
 }
 
 .post-links {
@@ -55,8 +57,17 @@
     padding-right: 50px;
 }
 
+.post-links > p {
+    margin-left: 10px;
+    margin-right: 15px;
+}
+
 .post-icon {
-    margin-right: 25px;
+    transition: 200ms;
+}
+
+.active-like {
+    color: red;
     transition: 200ms;
 }
 
