--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -2,7 +2,7 @@
     position: fixed;
     left: 80vw;
     height: 100vh;
-    width: 17.5vw;
+    width: 20%;
     min-width: fit-content;
 
     border-left: var(--highlight-color) 1px solid;
@@ -28,13 +28,16 @@
 }
 
 .search-input > input {
-    width: 85%;
+    width: 75%;
     border: none;
 
     padding: 10px;
 
     border-bottom: var(--highlight-color) solid 1px;
     background-color: var(--background-color);
+
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 
     resize: none;
 
@@ -43,6 +46,20 @@
     font-family: 'Lato', sans-serif;
 
     color: white;
+    transition: 200ms;
+}
+
+.search-input > input:hover {
+    outline: none;
+    background-color: var(--selected-color);
+    transition: 200ms;
+}
+
+.search-input > input:focus {
+    outline: none;
+    background-color: var(--selected-color);
+    border-bottom: white solid 1px;
+    transition: 400ms;
 }
 
 .search-input > input:focus {
