--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,3 +1,8 @@
+/* html {
+    overflow: hidden;
+    height: 100%;
+} */
+
 * {
     margin: 0;
 }
@@ -6,6 +11,8 @@ body {
     font-family: 'Lato', sans-serif;
     color: white;
     background-color: #212121;
+    overflow: auto;
+    height: 100%;
 }
 
 body::-webkit-scrollbar {
