--- a/client/src/css/Account.css
+++ b/client/src/css/Account.css
@@ -1,11 +1,11 @@
 .account-header {
     display: flex;
-
     padding: 30px 0;
     border-bottom: var(--highlight-color) 1px solid;
 }
 
 .account-header > div {
+    width: 100%;
     margin-left: 3vw;
 }
 
@@ -28,6 +28,9 @@
 .header-buttons {
     display: flex;
     flex-direction: column;
+    position: relative;
+    justify-content: right;
+    padding: 0 5vw;
 }
 
 .header-buttons > .button {
@@ -49,4 +52,69 @@
     margin-top: 40px;
     display: flex;
     justify-content: center;
+}
+
+.account-edit-content {
+    font-family: 'Lato', sans-serif;
+    display: flex;
+    align-items: center;
+    /* font-weight: 400; */
+    font-size: 1.5rem;
+    padding: 50px;
+    padding-left: 55px !important;
+}
+
+.account-edit-form {
+    width: 100%;
+    margin-left: 30px !important;
+}
+
+.account-edit-input {
+    width: 90%;
+    border: none;
+
+    padding: 10px;
+
+    border-bottom: #6C6C6C solid 1px;
+    background-color: var(--background-color);
+
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+
+    resize: none;
+
+    font-size: 15px;
+    font-weight: 300;
+
+    color: white;
+    transition: 200ms;
+}
+
+.account-edit-input:hover {
+    outline: none;
+    background-color: #464646;
+    transition: 200ms;
+}
+
+.account-edit-input:focus {
+    outline: none;
+    background-color: #464646;
+    border-bottom: white solid 1px;
+    transition: 400ms;
+}
+
+.account-edit-submit {
+    background-color: #6C6C6C !important;
+    border-radius: 0 !important;
+
+    margin: 0 auto !important;
+
+    color: white !important;
+    font-family: 'Lato', sans-serif !important;
+    font-weight: 300 !important;
+    text-transform: none !important;
+
+    margin-top: 10px !important;
+    height: 30px !important;
+    width: 100px !important;
 }
