--- a/client/src/css/Account.css
+++ b/client/src/css/Account.css
@@ -27,13 +27,14 @@
 }
 
 .username {
+    font-size: clamp(1.5rem, 1.6vw, 2rem);
     letter-spacing: 1px;
     margin-bottom: 10px;
 }
 
 .userpic {
-    width: 150px !important;
-    height: 150px !important;
+    width: clamp(100px, 7.5vw, 150px) !important;
+    height: clamp(100px, 7.5vw, 150px) !important;
 }
 
 .userbio {
