--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -5,11 +5,12 @@
     --error-highlight-color: rgb(255, 65, 65);
     --error-color: rgb(150, 65, 65);
     display: flex;
+    width: 100%;
 }
 
 .content{
+    justify-self: center;
     min-height: 100vh;
-    width: 60%;
-    margin-left: 20vw;
+    width: clamp(1000px, 60%, 2500px);
     overflow: hidden;
 }
