--- a/client/src/components/InputBox/InputBox.css
+++ b/client/src/components/InputBox/InputBox.css
@@ -36,7 +36,7 @@
     width: 100%;
     border: none;
 
-    padding: 10px 0;
+    padding: 10px 10px;
 
 
     border-bottom: var(--highlight-color) solid 1px;
