--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -55,3 +55,21 @@
     border-bottom: white solid 1px;
     transition: 400ms;
 }
+
+.user-row-container {
+    padding-left: 25px;
+    padding-top: 5px;
+}
+
+.user-row {
+    display: flex;
+    align-items: center;
+    margin-bottom: 25px;
+    cursor: pointer;
+}
+
+.user-row-pic {
+    margin-right: 10px;
+    width: 30px !important;
+    height: 30px !important;
+}
